This commits fixes the menu box. It was fized by changinf the display attribute on the H1 to flex and align it

--- a/css/menu.css
+++ b/css/menu.css
@@ -12,7 +12,7 @@
 }
 
 .menu-banner__box__text {
-  display: inline;
+  display: flex;
   box-sizing: border-box;
   position: relative;
   bottom: 0.625rem;
@@ -21,12 +21,33 @@
   min-height: 11.25rem;
   border: #5bacc3 0.3125rem solid;
   color: #fff;
+  align-items: center;
+  justify-content: center;
+}
+
+.menu-banner__box__text:hover {
+  display: inline;
+  box-sizing: border-box;
+  position: relative;
+  /* bottom: 0.625rem; */
+  /* right: 0.625rem; */
+  min-width: 17.5rem;
+  min-height: 11.25rem;
+  /* border: #5bacc3 0.3125rem solid; */
+  color: #fff;
   align-self: center;
+}
+
+.menu-banner__box__text--with-transition {
+  /* transition: all 3s ease; */
+  /* -webkit-transition: all 3s ease;
+  -moz-transition: all 3s ease;
+  -o-transition: all 3s ease; */
 }
 
 .menu-banner__box {
   box-sizing: border-box;
-  /* position: relative; */
+  position: relative;
   display: flex;
   flex-direction: column;
   align-self: center;
